--- a/go-app/frontend/package.json
+++ b/go-app/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
