--- a/go-app/frontend/package.json
+++ b/go-app/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swr": "^2.3.6"
+    "react-hook-form": "^7.63.0",
+    "swr": "^2.3.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
