--- a/go-app/frontend/package.json
+++ b/go-app/frontend/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "swr": "^2.3.6",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "semver": "^7.7.2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/semver": "^7.7.1",
     "@vitejs/plugin-react": "^5.0.3",
     "daisyui": "^5.1.13",
     "prettier": "^3.6.2",
