feat: add profile schema and profile builder

--- a/go-app/frontend/package.json
+++ b/go-app/frontend/package.json
@@ -4,21 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "generate:profile_json_schema": "node ./profile_json_schema/dereference.mjs",
     "format": "prettier --write .",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@json-editor/json-editor": "^2.15.2",
     "just-throttle": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
+    "semver": "^7.7.2",
     "swr": "^2.3.6",
-    "zustand": "^5.0.8",
-    "semver": "^7.7.2"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@apidevtools/json-schema-ref-parser": "^14.2.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
