--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build
         run: |
-          xmake f -m "Game__Shipping__Win64" --ue4ssProxyPath=C:/Windows/System32/dxgi.dll -y
+          xmake f -m "Game__Shipping__Win64" --ue4ssProxyPath C:/Windows/System32/dxgi.dll -y
           xmake build
 
       - uses: actions/upload-artifact@v4
