fix: working dir

--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -30,6 +30,7 @@ jobs:
           xmake-version: '2.9.3'
 
       - name: Build
+        working-directory: ./RE-UE4SS
         run: |
           xmake f -m "Game__Shipping__Win64" --ue4ssProxyPath C:/Windows/System32/dxgi.dll -y
           xmake build
