--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -42,14 +42,48 @@ jobs:
             Binaries/Game__Shipping__Win64/UE4SS/UE4SS.dll
             Binaries/Game__Shipping__Win64/proxy/dxgi.dll
 
-      # - name: Make Archival Experimental Release
-      #   uses: softprops/action-gh-release@v1
-      #   with:
-      #     prerelease: true
-      #     tag_name: experimental
-      #     body_path: release/release_notes.md
-      #     files: |
-      #       release/UE4SS_v*.zip
-      #       release/zDEV-UE4SS_v*.zip
-      #       release/zCustomGameConfigs.zip
-      #       release/zMapGenBP.zip
+  build-go-app-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Go 1.24.5
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.24.5
+
+
+      - name: Download and install SDL2
+        shell: pwsh
+        run: |
+          # Variables
+          $url = "https://github.com/libsdl-org/SDL/releases/download/release-2.32.6/SDL2-2.32.6-win32-x64.zip"
+          $zipPath = "$env:RUNNER_TEMP\SDL2.zip"
+          $extractPath = "$env:RUNNER_TEMP\SDL2"
+          $globalPath = "C:\SDL2"
+
+          # Download SDL2
+          Write-Host "Downloading SDL2..."
+          Invoke-WebRequest -Uri $url -OutFile $zipPath
+
+          # Extract
+          Write-Host "Extracting SDL2..."
+          Expand-Archive -Path $zipPath -DestinationPath $extractPath -Force
+
+          # Create global directory
+          Write-Host "Creating global directory..."
+          New-Item -ItemType Directory -Force -Path $globalPath | Out-Null
+
+          # Find and copy DLL
+          $dll = Get-ChildItem -Path $extractPath -Recurse -Filter "SDL2.dll" | Select-Object -First 1
+          if (-not $dll) { throw "SDL2.dll not found after extraction!" }
+          Write-Host "Copying $($dll.FullName) to $globalPath"
+          Copy-Item -Path $dll.FullName -Destination $globalPath -Force
+
+          # Add to PATH for this job
+          Write-Host "Adding SDL2 to PATH..."
+          "C:\SDL2" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+
+          # Verify
+          Write-Host "Verifying SDL2.dll is accessible..."
+          Get-ChildItem "C:\SDL2"
