--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -87,3 +87,18 @@ jobs:
           # Verify
           Write-Host "Verifying SDL2.dll is accessible..."
           Get-ChildItem "C:\SDL2"
+
+  build-go-app-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Go 1.24.5
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.24.5
+
+      - name: Install SDL2 libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsdl2-dev libsdl2-2.0-0
