--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}_socketconnectionlib_cargo_
       - run: |
           cd ./tsw-controller-mod/socket-connection-lib
-          cargo build --target x86_64-pc-windows-msvc --release
+          cargo build --release
       - uses: actions/upload-artifact@v4
         with:
           name: socketconnectionlib
