--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -35,6 +35,7 @@ jobs:
           name: socketconnectionlib
           path: |
             tsw-controller-mod/socket-connection-lib/target/release/*.dll
+            tsw-controller-mod/socket-connection-lib/target/release/*.h
 
   build__ue4ssmod:
     runs-on: windows-2022
@@ -69,6 +70,14 @@ jobs:
             C:/Users/runneradmin/AppData/Local/.xmake
           key: ${{ runner.os }}_ue4ssmod_xmake_${{ hashFiles('RE-UE4SS/**/xmake.lua') }}
 
+      - name: Copy custom mod
+        run: |
+          Copy-Item -Path "tsw-controller-mod/ue4ss-mod" -Destination "RE-UE4SS/cppmods/TSWControllerMod" -Recurse -Force
+          @"
+          includes("KismetDebuggerMod")
+          includes("TSWControllerMod")
+          "@ | Out-File -FilePath "RE-UE4SS/cppmods/xmake.lua" -Encoding utf8
+
       - name: Build
         run: |
           cd ./RE-UE4SS
@@ -81,6 +90,7 @@ jobs:
           path: |
             RE-UE4SS/Binaries/Game__Shipping__Win64/UE4SS/UE4SS.dll
             RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/dxgi.dll
+            RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/cppmods/TSWControllerMod/*.dll
 
   build-go-app-windows:
     runs-on: windows-latest
