--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -86,11 +86,28 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: ue4ss-mod
-          path: |
-            RE-UE4SS/Binaries/Game__Shipping__Win64/UE4SS/UE4SS.dll
-            RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/dxgi.dll
-            RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/cppmods/TSWControllerMod/*.dll
+          name: ue4ssdll
+          path: RE-UE4SS/Binaries/Game__Shipping__Win64/UE4SS/UE4SS.dll
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ue4ssproxy
+          path: RE-UE4SS/Binaries/Game__Shipping__Win64/proxy/dxgi.dll
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: tswcontrollermod
+          path: RE-UE4SS/Binaries/Game__Shipping__Win64/cppmods/TSWControllerMod/*.dll
+
+  build__mod_assets:
+    runs-on: ubuntu-latest
+    needs: [build__socketconnectionlib, build__ue4ssmod]
+    steps:
+      - uses: actions/download-artifact@v5
+        name: Download previously built artifacts
+      - run: find .
+
+
 
   build-go-app-windows:
     runs-on: windows-latest
@@ -152,6 +169,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libsdl2-dev libsdl2-2.0-0
+
 
   build-go-app-macos:
     runs-on: macos-latest
