chore: list socket conn files

--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Print files
         run: |
-          Get-ChildItem -Path . -Recurse -File
+          Get-ChildItem -Path socketconnectionlib -Recurse -File
 
       - name: Copy custom mod
         run: |
