--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -183,15 +183,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install SDL2 libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libsdl2-dev libsdl2-2.0-0
+
       - name: Setup Go 1.24.5
         uses: actions/setup-go@v5
         with:
           go-version: 1.24.5
 
-      - name: Install SDL2 libraries
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libsdl2-dev libsdl2-2.0-0
+      - name: Install wails
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@v2.10
 
       - uses: actions/download-artifact@v5
         name: Download mod_assets artifact
@@ -217,13 +220,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install SDL2 using Homebrew
+        run: |
+          brew update
+          brew install sdl2
+
       - name: Setup Go 1.24.5
         uses: actions/setup-go@v5
         with:
           go-version: 1.24.5
 
+      - name: Install wails
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@v2.10
 
-      - name: Install SDL2 using Homebrew
-        run: |
-          brew update
-          brew install sdl2
+      - uses: actions/download-artifact@v5
+        name: Download mod_assets artifact
+        with:
+          name: mod_assets
+          path: mod_assets
+      - run: cp -r mod_assets go-app/mod_assets
+      - run: |
+          cd go-app
+          wails build
+      - uses: actions/upload-artifact@v4
+        with:
+          name: tswcontrollerapp_macos
+          path: |
+            go-app/build/bin/tsw-controller-app
