--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -190,7 +190,7 @@ jobs:
 
       - name: Install RobotGo dependencies
         run: |
-          sudo apt-get install -y libx11-dev xorg-dev libxtst-dev xsel xclip libpng++-dev xcb libxcb-xkb-dev x11-xkb-utils libx11-xcb-dev libxkbcommon-x11-dev libxkbcommon-dev
+          sudo apt-get install -y libx11-dev xorg-dev libxtst-dev xsel xclip libpng++-dev xcb libxcb-xkb-dev x11-xkb-utils libx11-xcb-dev libxkbcommon-x11-dev libxkbcommon-dev libgtk-3-dev libwebkit2gtk-4.0-dev
 
       - name: Setup Go 1.24.5
         uses: actions/setup-go@v5
@@ -247,6 +247,7 @@ jobs:
       - run: |
           cd go-app
           wails build
+          find build
       - uses: actions/upload-artifact@v4
         with:
           name: tswcontrollerapp_macos
