--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -174,6 +174,7 @@ jobs:
 
       - run: Copy-Item -Path mod_assets -Destination go-app/mod_assets -Recurse -Force
       - run: |
+          $env:VERSION=Get-Content RELEASE_VERSION
           cd go-app
            ./windows_build.ps1
 
@@ -196,7 +197,7 @@ jobs:
         with:
           name: tswcontrollerapp_windows_installer
           path: |
-            go-app/*.exe
+            go-app/Output/tswcontrollerapp-setup.exe
 
   build__goapp__linux:
     runs-on: ubuntu-22.04
@@ -230,14 +231,38 @@ jobs:
       - run: cp -r mod_assets go-app/mod_assets
       - run: find go-app/mod_assets
       - run: |
+          VERSION=$(cat RELEASE_VERSION)
           cd go-app
-          wails build
+          wails build -ldflags="-X 'main.VERSION=$VERSION'"
 
       - uses: actions/upload-artifact@v4
         with:
           name: tswcontrollerapp_linux
           path: |
             go-app/build/bin/tsw-controller-app
+
+      - run: |
+          mkdir tswcontrollerapp_debian_amd64
+          mkdir -p tswcontrollerapp_debian_amd64/DEBIAN
+          mkdir -p tswcontrollerapp_debian_amd64/usr/local/bin
+          cp go-app/build/bin/tsw-controller-app tswcontrollerapp_debian_amd64/usr/local/bin/
+          cat <<EOF > tswcontrollerapp_debian_amd64/DEBIAN/control
+          Package: tswcontrollerapp
+          Version: ${VERSION}
+          Section: utils
+          Priority: optional
+          Architecture: amd64
+          Depends: libwebkit2gtk-4.1-0, libgtk-3-0, libsdl2-2.0-0
+          Maintainer: L Martens <hi@liammartens.com>
+          Description: TSW Controller App
+          EOF
+          dpkg-deb --build tswcontrollerapp_debian_amd64
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: tswcontrollerapp_linux_debian
+          path: |
+            tswcontrollerapp_debian_amd64.deb
 
 
   build__goapp__macos:
@@ -266,8 +291,9 @@ jobs:
           path: mod_assets
       - run: cp -r mod_assets go-app/mod_assets
       - run: |
+          VERSION=$(cat RELEASE_VERSION)
           cd go-app
-          wails build
+          wails build -ldflags="-X 'main.VERSION=$VERSION'"
           find build
       - uses: actions/upload-artifact@v4
         with:
