feat: update config dirs

--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -295,6 +295,14 @@ jobs:
           cd go-app
           wails build -ldflags="-X 'main.VERSION=$VERSION'"
           find build
+          find /usr/local/lib
+          find /opt/homebrew/lib
+          mkdir -p build/bin/tsw-controller-app.app/Contents/Frameworks
+          cp /opt/homebrew/lib/libSDL2.dylib build/bin/tsw-controller-app.app/Contents/Frameworks/
+          install_name_tool -change /opt/homebrew/lib/libSDL2.dylib @executable_path/../Frameworks/libSDL2.dylib build/bin/tsw-controller-app.app/Contents/MacOS/tsw-controller-app
+          install_name_tool -id @rpath/libSDL2.dylib build/bin/tsw-controller-app.app/Contents/Frameworks/libSDL2.
+          install_name_tool -add_rpath @executable_path/../Frameworks build/bin/tsw-controller-app.app/Contents/MacOS/tsw-controller-app
+          codesign --force --deep --sign - build/bin/tsw-controller-app.app
       - uses: actions/upload-artifact@v4
         with:
           name: tswcontrollerapp_macos
