--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -324,7 +324,7 @@ jobs:
         run: |
           mkdir release_assets
 
-          cp tswcontrollerapp_windows release_assets/tswcontrollerapp_win64_binary
+          cp -r tswcontrollerapp_windows release_assets/tswcontrollerapp_win64_binary
           cp tswcontrollerapp_windows_installer/tswcontrollerapp-setup.exe release_assets/tswcontrollerapp_win64_setup.exe
 
           cp tswcontrollerapp_linux/tsw-controller-app release_assets/tswcontrollerapp_linux_amd64_binary
