--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -330,7 +330,8 @@ jobs:
           cp tswcontrollerapp_linux/tsw-controller-app release_assets/tswcontrollerapp_linux_amd64_binary
           cp tswcontrollerapp_linux_debian/tswcontrollerapp_debian_amd64.deb release_assets/tswcontrollerapp_debian_amd64.deb
 
-          cp -r tswcontrollerapp_macos/tsw-controller-app/tsw-controller-app.app release_assets/tswcontrollerapp_macos/tsw-controller-app.app
+          mkdir -p release_assets/tswcontrollerapp_macos
+          cp -r tswcontrollerapp_macos/tsw-controller-app.app release_assets/tswcontrollerapp_macos/tsw-controller-app.app
 
           cp -r mod_assets release_assets/manual_ue4ss_mod_installation
 
