--- a/go-app/mod_assets/manifest.json
+++ b/go-app/mod_assets/manifest.json
@@ -1,10 +1,14 @@
 {
   "manifest": [
-    "dxgi.dll",
-    "ue4ss_tsw_controller_mod/UE4SS.dll",
-    "ue4ss_tsw_controller_mod/UE4SS-settings.ini",
-    "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/enabled.txt",
-    "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/dlls/main.dll",
-    "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/dlls/tsw_controller_mod_socket_connection.dll"
+    { "path": "dxgi.dll", "action": "delete" },
+    { "path": "winmm.dll", "action": "copy" },
+    { "path": "ue4ss_tsw_controller_mod/UE4SS.dll", "action": "copy" },
+    { "path": "ue4ss_tsw_controller_mod/UE4SS-settings.ini", "action": "copy" },
+    { "path": "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/enabled.txt", "action": "copy" },
+    { "path": "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/dlls/main.dll", "action": "copy" },
+    {
+      "path": "ue4ss_tsw_controller_mod/Mods/TSWControllerMod/dlls/tsw_controller_mod_socket_connection.dll",
+      "action": "copy"
+    }
   ]
 }
